Fix: Row actions are misaligned when an IAvailableAction is not displayed in some rows

--- a/openxava/src/main/resources/META-INF/resources/xava/style/base.css
+++ b/openxava/src/main/resources/META-INF/resources/xava/style/base.css
@@ -1215,8 +1215,9 @@ i {
 
 .ox-list-action-cell {
 	vertical-align: middle;
-	text-align: center;
+	text-align: left;
 	padding-right: 2px;
+	padding-left: 7px !important;
 }
 
 .ox-list-data-cell { 
